# cmake-library-template-project

./: .gitignore  CMakeLists.txt  README.md  setup.sh
cmake/: PROJECT_NAMEConfig.cmake.in  version.h.in
